# 120kW-AC-DC-Bidirectional

./: README.md  REVIEW.md  Thumbs.db  YSTECH_PCS_BusMaster.dbc  pyproject.toml  requirements.txt
dcdc_app/: __init__.py  __main__.py  can_iface.py  cli.py  controller.py  logging_utils.py  protocol.py  simulator.py
dcdc_app/gui/: __init__.py  __main__.py  app.py  backend.py  main_window.py  theme.py  widgets.py
tests/: test_controller.py  test_protocol.py
